# gd_tools

./: .gitignore  README.md  commit.bat  pyproject.toml
.spyproject/config/backups/: workspace.ini.bak
data/csv/: prop_table.csv  remap_table.csv
data/gmd/: P2 Memory Lane.gmd  Unnamed 713.gmd  Unnamed 714.gmd  Unnamed 721.gmd  Unnamed 722.gmd  broken.gmd  color_test.gmd  position result.gmd  position test.gmd
src/gd_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/level_tools/: __init__.py  build.py
src/level_tools/casting/: __init__.py  color.py  id_rules.py  object_properties.py
src/level_tools/classes/: colors.py  hsv.py  level.py  lists.py  live_editor.py  object.py  particle.py  save.py  serialization.py  text.py  types.py
src/level_tools/defaults/: color_default.py  objects.py
src/level_tools/examples/: compile_colors.py  compile_defaults.py  read_color_ids_from_gmd.py  read_level.py  read_level1.py
src/level_tools/functions/: level.py  (+1 more)
src/old/: Prop Tables - Sheet6.csv  Prop Tables - Sheet7.csv  all_1234.txt  all_1234_sanit.txt  color_check.py  color_test.gmd  convertcsv.py  groups_df.csv  groups_output.txt  level_func.py  level_string_without_save.txt  new_groups (1) - Sheet1.csv  new_groups (1) - Sheet2.csv  new_groups.csv  obj_color_test.gmd  obj_color_test_output.gmd  output.csv  process_props.py  props.json  props_1234.json  props_map.py  read_color_test.py  test.gmd  test.py  test_level.txt  test_output.txt  test_script.py  untitled0.py  untitled2.py  untitled3.py
src/sprite_tools/: spritesheets.py
ss/: Template.gmd
(+8 files in other folders)
