[project]
name = "gd_tools"
version = "0.0.0"
description = "Various editing tools for interacting and modifying Geometry Dash resources and save files."
authors = [{name = "HDanke"}]
readme = "README.md"
license = {text = ""}
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"